--- a/src/pia/Login.fxml
+++ b/src/pia/Login.fxml
@@ -18,7 +18,7 @@
             <TextField fx:id="usernameField" onAction="#handleActionUsernameTextField" prefWidth="200.0" promptText="Username" GridPane.columnIndex="0" GridPane.rowIndex="1" />
             <PasswordField fx:id="passwordField" onAction="#handleActionPasswordField" prefWidth="200.0" promptText="Password" GridPane.columnIndex="0" GridPane.rowIndex="2" />
             <Separator orientation="VERTICAL" prefHeight="-1.0" visible="false" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-            <Button alignment="CENTER" contentDisplay="LEFT" mnemonicParsing="false" onAction="#handleButtonLogin" prefWidth="300.0" text="Einloggen" textAlignment="LEFT" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+            <Button fx:id="loginButton" alignment="CENTER" contentDisplay="LEFT" mnemonicParsing="false" onAction="#handleLogin" prefWidth="300.0" text="Einloggen" textAlignment="LEFT" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
           </children>
           <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -28,7 +28,7 @@
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
           </rowConstraints>
         </GridPane>
         <Separator orientation="VERTICAL" prefHeight="-1.0" prefWidth="2.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
@@ -38,11 +38,11 @@
         </Separator>
         <GridPane id="GridPane" GridPane.columnIndex="1" GridPane.rowIndex="2">
           <children>
-            <Button mnemonicParsing="false" prefWidth="300.0" text="Anonym Einloggen" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+            <Button id="anonymLogin" fx:id="anonLoginButton" mnemonicParsing="false" onAction="#handleAnonLogin" prefWidth="300.0" text="Anonym Einloggen" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
             <Separator orientation="VERTICAL" prefHeight="81.0" visible="false" GridPane.columnIndex="0" GridPane.rowIndex="1" />
             <Label text="Anonym einloggen" GridPane.columnIndex="0" GridPane.rowIndex="0">
               <GridPane.margin>
-                <Insets fx:id="x1" />
+                <Insets />
               </GridPane.margin>
             </Label>
           </children>
@@ -52,13 +52,16 @@
           <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
           </rowConstraints>
         </GridPane>
-        <Label alignment="CENTER" prefHeight="132.99990000000253" prefWidth="600.0" text="Podcast Information Aggregator" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.margin="$x1" GridPane.rowIndex="1">
+        <Label alignment="CENTER" prefHeight="132.99990000000253" prefWidth="600.0" text="Podcast Information Aggregator" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="1">
           <font>
             <Font size="23.0" />
           </font>
+          <GridPane.margin>
+            <Insets left="-3.0" />
+          </GridPane.margin>
         </Label>
       </children>
       <columnConstraints>
@@ -71,7 +74,7 @@
       <rowConstraints>
         <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
         <RowConstraints maxHeight="186.0" minHeight="10.0" prefHeight="113.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="168.0" minHeight="10.0" prefHeight="151.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="168.0" minHeight="-Infinity" prefHeight="151.0" vgrow="SOMETIMES" />
         <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="92.0" vgrow="SOMETIMES" />
       </rowConstraints>
     </GridPane>
