--- a/src/pia/views/MainView.fxml
+++ b/src/pia/views/MainView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml" fx:controller="pia.MainViewController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml" fx:controller="pia.views.MainViewController">
   <children>
     <BorderPane prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <center>
@@ -18,6 +18,7 @@
                 <Label layoutY="4.0" text="Nodes" />
                 <Button layoutY="332.0" mnemonicParsing="false" onAction="#handleButtonAddNode" text="+" />
                 <Button layoutX="33.0" layoutY="332.0" mnemonicParsing="false" onAction="#handleButtonDeleteNode" text="-" />
+                <Button layoutY="332.0" mnemonicParsing="false" text="refresh" AnchorPane.rightAnchor="0.0" />
               </children>
             </AnchorPane>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
