--- a/src/pia/views/MainWindow.fxml
+++ b/src/pia/views/MainWindow.fxml
@@ -9,7 +9,7 @@
   <children>
     <GridPane prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
-        <fx:include source="PlayerControls.fxml" maxWidth="1.7976931348623157E308" mouseTransparent="false" pickOnBounds="true" prefHeight="126.0" prefWidth="600.0" GridPane.columnIndex="0" GridPane.columnSpan="2147483647" GridPane.rowIndex="0" />
+        <fx:include source="../PlayerControls.fxml" maxWidth="1.7976931348623157E308" mouseTransparent="false" pickOnBounds="true" prefHeight="126.0" prefWidth="600.0" GridPane.columnIndex="0" GridPane.columnSpan="2147483647" GridPane.rowIndex="0" />
       </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
