--- a/src/pia/views/PlayerControls.fxml
+++ b/src/pia/views/PlayerControls.fxml
@@ -9,10 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" fx:id="PlayerControls" maxHeight="-Infinity" maxWidth="-Infinity"
-            minHeight="-Infinity" minWidth="-Infinity" prefHeight="15.999991552736901"
-            prefWidth="61.99999672852573" xmlns:fx="http://javafx.com/fxml"
-            fx:controller="pia.views.PlayerControlsController">
+<AnchorPane id="AnchorPane" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="68.99989155273943" prefWidth="317.99999672852573" xmlns:fx="http://javafx.com/fxml" fx:controller="pia.views.PlayerControlsController">
   <children>
     <HBox id="HBox" alignment="CENTER" prefHeight="90.0" prefWidth="454.499977929685" spacing="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
@@ -30,9 +27,9 @@
             <Pane id="prev" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" prefHeight="50.0" prefWidth="50.0" styleClass="button-con" />
           </graphic>
         </Button>
-        <Button fx:id="playPauseButton" defaultButton="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="-1.0" prefWidth="-1.0" text="" HBox.hgrow="ALWAYS">
+        <Button fx:id="playPauseButton" defaultButton="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#toggle" prefHeight="-1.0" prefWidth="-1.0" text="" HBox.hgrow="ALWAYS">
           <graphic>
-            <Pane id="playpause" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" prefHeight="50.0" prefWidth="50.0" styleClass="button-con" />
+            <Pane id="pause" fx:id="playPauseButtonIcon" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" prefHeight="50.0" prefWidth="50.0" styleClass="button-con" />
           </graphic>
         </Button>
         <Button fx:id="seekForwardButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="" HBox.hgrow="ALWAYS">
