--- a/src/pia/views/MainWindow.fxml
+++ b/src/pia/views/MainWindow.fxml
@@ -2,26 +2,42 @@
 
 <?import java.lang.*?>
 <?import java.util.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="489.0" prefWidth="734.0" xmlns:fx="http://javafx.com/fxml">
+<AnchorPane id="AnchorPane" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="489.0" prefWidth="734.0" xmlns:fx="http://javafx.com/fxml" fx:controller="pia.views.MainWindowController">
   <children>
-    <GridPane prefHeight="489.0" prefWidth="734.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <children>
-        <fx:include source="PlayerControls.fxml" maxHeight="-1.0" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="false" pickOnBounds="true" prefHeight="122.0" prefWidth="110.0" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <fx:include source="Chat.fxml" disable="false" pickOnBounds="true" prefHeight="496.0" prefWidth="482.0" visible="true" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-      </children>
-      <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="279.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="147.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0" />
-      </columnConstraints>
-      <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      </rowConstraints>
-    </GridPane>
+    <BorderPane prefHeight="489.0" prefWidth="734.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <bottom>
+        <HBox prefHeight="24.0" prefWidth="734.0" spacing="5.0">
+          <children>
+            <Label text="Statustext" />
+          </children>
+          <padding>
+            <Insets bottom="2.0" left="6.0" right="6.0" top="2.0" />
+          </padding>
+        </HBox>
+      </bottom>
+      <center>
+        <fx:include source="Chat.fxml" disable="false" maxHeight="-1.0" maxWidth="-1.0" minHeight="-1.0" minWidth="-1.0" pickOnBounds="true" prefHeight="-1.0" prefWidth="-1.0" visible="true" />
+      </center>
+      <left>
+        <ScrollPane prefHeight="200.0" prefWidth="200.0">
+          <content>
+            <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+          </content>
+        </ScrollPane>
+      </left>
+      <top>
+        <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" BorderPane.alignment="CENTER">
+          <children>
+            <fx:include fx:id="playerControls" source="PlayerControls.fxml" maxHeight="-1.0" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="false" pickOnBounds="true" prefHeight="53.0" prefWidth="-1.0" />
+            <fx:include fx:id="notesPane" source="NotesPad.fxml" maxHeight="-1.0" maxWidth="-1.0" prefHeight="130.0" prefWidth="-1.0" />
+          </children>
+        </VBox>
+      </top>
+    </BorderPane>
   </children>
 </AnchorPane>
