--- a/src/pia/views/MainWindow.fxml
+++ b/src/pia/views/MainWindow.fxml
@@ -13,7 +13,7 @@
       <bottom>
         <HBox prefHeight="24.0" prefWidth="734.0" spacing="5.0">
           <children>
-            <Label text="Statustext" />
+            <Label text="Statustext" textFill="GREY" />
           </children>
           <padding>
             <Insets bottom="2.0" left="6.0" right="6.0" top="2.0" />
@@ -21,20 +21,52 @@
         </HBox>
       </bottom>
       <center>
-        <fx:include source="Chat.fxml" disable="false" maxHeight="-1.0" maxWidth="-1.0" minHeight="-1.0" minWidth="-1.0" pickOnBounds="true" prefHeight="-1.0" prefWidth="-1.0" visible="true" />
+        <fx:include source="Chat.fxml" disable="false" maxHeight="-1.0" maxWidth="-1.0" minHeight="200.0" minWidth="-1.0" pickOnBounds="true" prefHeight="300.0" prefWidth="-1.0" visible="true">
+          <padding>
+            <Insets top="-1.0" />
+          </padding>
+        </fx:include>
       </center>
       <left>
-        <ScrollPane prefHeight="200.0" prefWidth="200.0">
-          <content>
-            <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-          </content>
-        </ScrollPane>
+        <AnchorPane prefHeight="200.0" prefWidth="300.0">
+          <children>
+            <Accordion maxWidth="-1.0" minWidth="170.0" prefHeight="-1.0" prefWidth="-1.0" translateY="-2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <expandedPane>
+                <TitledPane fx:id="x1" animated="true" expanded="true" text="Etherpad und so">
+                  <content>
+                    <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  </content>
+                </TitledPane>
+              </expandedPane>
+              <panes>
+                <TitledPane animated="true" collapsible="true" expanded="false" text="Intro">
+                  <content>
+                    <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  </content>
+                </TitledPane>
+                <fx:reference source="x1" />
+              </panes>
+            </Accordion>
+          </children>
+        </AnchorPane>
       </left>
       <top>
         <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" BorderPane.alignment="CENTER">
           <children>
-            <fx:include fx:id="playerControls" source="PlayerControls.fxml" maxHeight="-1.0" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="false" pickOnBounds="true" prefHeight="53.0" prefWidth="-1.0" />
-            <fx:include fx:id="notesPane" source="NotesPad.fxml" maxHeight="-1.0" maxWidth="-1.0" prefHeight="130.0" prefWidth="-1.0" />
+            <fx:include fx:id="playerControls" source="PlayerControls.fxml" maxHeight="-1.0" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="false" pickOnBounds="true" prefHeight="80.0" prefWidth="734.0" />
+            <BorderPane prefHeight="69.0" prefWidth="734.0">
+              <center>
+                <Pane fx:id="visualisation" prefHeight="72.0" prefWidth="734.0" style="-fx-background-image: url('file:///home/n1nsun/eis animation sprites/visualisation.png');&#10;-fx-background-image-position: bottom;&#10;-fx-background-image-repeat: repeat-x;&#10;-fx-background-image-size: cover;&#10;">
+                  <BorderPane.margin>
+                    <Insets />
+                  </BorderPane.margin>
+                </Pane>
+              </center>
+              <right>
+                <Pane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="69.0" prefWidth="46.0" style="-fx-border-width: 0 0 2 2;&#10;-fx-border-color: BLUE RED;" />
+              </right>
+            </BorderPane>
+            <fx:include fx:id="notesPane" source="NotesPad.fxml" maxHeight="-1.0" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="-1.0" style="-fx-background-color: linear (0%,0%) to (0%,5%) stops (0.0 , #33aaff) (1.0,white);&#10;-fx-border-width: 0 0 1 0;&#10;-fx-border-color: black;" />
           </children>
         </VBox>
       </top>
