--- a/src/pia/views/PlayerControls.fxml
+++ b/src/pia/views/PlayerControls.fxml
@@ -9,50 +9,96 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="68.99989155273943" prefWidth="317.99999672852573" xmlns:fx="http://javafx.com/fxml" fx:controller="pia.views.PlayerControlsController">
+<AnchorPane id="AnchorPane" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" padding="$x1" prefHeight="70.0" prefWidth="700.0" xmlns:fx="http://javafx.com/fxml" fx:controller="pia.views.PlayerControlsController">
   <children>
-    <HBox id="HBox" alignment="CENTER" prefHeight="90.0" prefWidth="454.499977929685" spacing="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <StackPane id="StackPane" prefHeight="76.0" prefWidth="722.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
-        <Button fx:id="previousTopicButton" cancelButton="false" defaultButton="false"
-                maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                minWidth="-1.0" mnemonicParsing="false" prefHeight="-1.0" prefWidth="-1.0"
-                text="" HBox.hgrow="ALWAYS" onAction="#previousTopic">
-          <graphic>
-            <Pane id="rev" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" prefHeight="50.0" prefWidth="50.0" styleClass="button-con">
-              <padding>
-                <Insets />
-              </padding>
-            </Pane>
-          </graphic>
-        </Button>
-        <Button fx:id="seekBackwardButton" defaultButton="false"
-                maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                mnemonicParsing="false" text="" HBox.hgrow="ALWAYS" onAction="#seekBackward">
-          <graphic>
-            <Pane id="prev" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" prefHeight="50.0" prefWidth="50.0" styleClass="button-con" />
-          </graphic>
-        </Button>
-        <Button fx:id="playPauseButton" defaultButton="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#toggle" prefHeight="-1.0" prefWidth="-1.0" text="" HBox.hgrow="ALWAYS">
-          <graphic>
-            <Pane id="pause" fx:id="playPauseButtonIcon" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" prefHeight="50.0" prefWidth="50.0" styleClass="button-con" />
-          </graphic>
-        </Button>
-        <Button fx:id="seekForwardButton" maxHeight="1.7976931348623157E308"
-                maxWidth="1.7976931348623157E308" mnemonicParsing="false" text=""
-                HBox.hgrow="ALWAYS" onAction="#seekForward">
-          <graphic>
-            <Pane id="next" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" prefHeight="50.0" prefWidth="50.0" styleClass="button-con" />
-          </graphic>
-        </Button>
-        <Button fx:id="nextTopicButton" defaultButton="false" maxHeight="1.7976931348623157E308"
-                maxWidth="1.7976931348623157E308" mnemonicParsing="false" text=""
-                HBox.hgrow="ALWAYS" onAction="#nextTopic">
-          <graphic>
-            <Pane id="for" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" prefHeight="50.0" prefWidth="50.0" styleClass="button-con" />
-          </graphic>
-        </Button>
+        <ToolBar maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" StackPane.alignment="CENTER">
+          <StackPane.margin>
+            <Insets fx:id="x1" />
+          </StackPane.margin>
+        </ToolBar>
+        <GridPane id="GridPane" prefHeight="70.0" prefWidth="700.0">
+          <children>
+            <AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.valignment="TOP">
+              <children>
+                <HBox id="HBox" alignment="CENTER" fillHeight="false" layoutX="0.0" prefHeight="-1.0" prefWidth="350.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <children>
+                    <Button fx:id="previousTopicButton" cancelButton="false" defaultButton="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="-1.0" mnemonicParsing="false" onAction="#previousTopic" prefHeight="40.0" prefWidth="-1.0" style="-fx-background-radius: 100;&#10;" text="" HBox.hgrow="NEVER">
+                      <graphic>
+                        <Pane id="prev" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" prefHeight="50.0" prefWidth="50.0" styleClass="button-con">
+                          <padding>
+                            <Insets fx:id="x1" />
+                          </padding>
+                        </Pane>
+                      </graphic>
+                      <tooltip>
+                        <Tooltip text="Go back to previous topic" />
+                      </tooltip>
+                    </Button>
+                    <Button fx:id="seekBackwardButton" defaultButton="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#seekBackward" prefHeight="50.0" style="-fx-background-radius: 100;" text="" HBox.hgrow="ALWAYS">
+                      <graphic>
+                        <Pane id="rev" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" prefHeight="50.0" prefWidth="50.0" styleClass="button-con" />
+                      </graphic>
+                      <tooltip>
+                        <Tooltip text="Rewind 30 seconds" />
+                      </tooltip>
+                    </Button>
+                    <Button fx:id="playPauseButton" defaultButton="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#toggle" prefHeight="60.0" prefWidth="-1.0" style="-fx-background-radius: 100;" text="" HBox.hgrow="ALWAYS">
+                      <graphic>
+                        <Pane id="pause" fx:id="playPauseButtonIcon" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" prefHeight="50.0" prefWidth="50.0" styleClass="button-con" />
+                      </graphic>
+                      <tooltip>
+                        <Tooltip text="Play / Pause" />
+                      </tooltip>
+                    </Button>
+                    <Button fx:id="seekForwardButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#seekForward" prefHeight="50.0" style="-fx-background-radius: 100;" text="" HBox.hgrow="ALWAYS">
+                      <graphic>
+                        <Pane id="for" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" prefHeight="50.0" prefWidth="50.0" styleClass="button-con" />
+                      </graphic>
+                      <tooltip>
+                        <Tooltip text="Skip the next 30 seconds" />
+                      </tooltip>
+                    </Button>
+                    <Button fx:id="nextTopicButton" defaultButton="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nextTopic" prefHeight="40.0" style="-fx-background-radius: 100;" text="" HBox.hgrow="ALWAYS">
+                      <graphic>
+                        <Pane id="next" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10.0" minWidth="10.0" prefHeight="50.0" prefWidth="50.0" styleClass="button-con" />
+                      </graphic>
+                      <tooltip>
+                        <Tooltip text="Go to next topic" />
+                      </tooltip>
+                    </Button>
+                  </children>
+                  <padding>
+                    <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                  </padding>
+                </HBox>
+              </children>
+            </AnchorPane>
+            <AnchorPane id="AnchorPane" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS">
+              <children>
+                <Slider fx:id="volumeControl" majorTickUnit="100.0" max="120.0" maxWidth="150.0" minHeight="20.0" minWidth="40.0" minorTickCount="0" prefHeight="50.0" prefWidth="120.0" rotate="0.0" showTickLabels="false" showTickMarks="false" snapToTicks="false" value="90.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="26.0">
+                  <tooltip>
+                    <Tooltip text="Volume" />
+                  </tooltip>
+                </Slider>
+              </children>
+            </AnchorPane>
+          </children>
+          <columnConstraints>
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="-1.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="350.0" prefWidth="350.0" />
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="-1.0" percentWidth="-1.0" prefWidth="100.0" />
+          </columnConstraints>
+          <padding>
+            <Insets fx:id="x1" />
+          </padding>
+          <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+          </rowConstraints>
+        </GridPane>
       </children>
-    </HBox>
+    </StackPane>
   </children>
   <stylesheets>
     <URL value="@PlayerControls.css" />
